@@ -2,9 +2,15 @@
 CHANGE LOG
 =========================================================================
 
+2008-07-25 Warren L. DeLano <warren@delsci.com>
+
+	* added buttons options to the scene menu
+
+	* fixed major bug in scene_order command
+	
 2008-07-24 Warren L. DeLano <warren@delsci.com>
 
-	* added scene_button_mode
+	* added scene_buttons, scene_buttons_mode
 	
 	* fixed bug found in the previous implicit OR bug fix
 	
